manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  defaultBackend:
    service:
      name: app-service
      port:
        number: 80
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /health
            pathType: Exact
            backend:
              service:
                name: app-service
                port:
                  number: 8080
